progressBar change, fix overflow on queueItem

--- a/src/comp/Player/CustomPlayer/CustomPlayer.css
+++ b/src/comp/Player/CustomPlayer/CustomPlayer.css
@@ -8,9 +8,6 @@
 	color: white;
 	display: flex;
 	align-items: flex-end;
-	/* background-color: rgba(0, 0, 0, 0.2); */
-	/* box-shadow: inset 0 4000px 4000px -4000px black,
-		inset 0 -4000px 4000px -4000px black; */
 }
 .customPlayer::before,
 .customPlayer::after {
@@ -50,24 +47,22 @@
 	margin: 0 10px;
 }
 
-.currentProgress {
+.currentProgress,
+.loadedProgress {
 	background-color: white;
 	height: 100%;
 	width: 100%;
 	position: absolute;
 	pointer-events: none;
-	left: 0;
+	left: -100%;
 	transition: transform 1000ms linear;
 	animation: shine 3s forwards infinite;
+	border-radius: inherit;
 }
 .loadedProgress {
 	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	pointer-events: none;
-	transition: transform 1000ms linear;
-	background-color: rgba(255, 255, 255, 0.3);
+	left: -100%;
+	background-color: rgba(255, 255, 255, 0.5);
 	z-index: -2;
 }
 
@@ -89,10 +84,9 @@
 .showTime {
 	display: flex;
 	justify-content: center;
-	min-width: 100px;
 	width: fit-content;
 	height: auto;
-	padding: 10px 20px;
+	padding: 6px 12px;
 	background-color: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	transform: translate(100%, -150%);
